# RootProject

./: .gitignore  .gitmodules  README.md  build.gradle  gradle.properties  settings.gradle  settings.gradle.kts
app/: build.gradle
app/src/main/: AndroidManifest.xml
app_bookreader/: build.gradle  build.gradle.kts.old
app_bookreader/src/main/: AndroidManifest.xml
app_demo/: build.gradle
app_demo/sampledata/teapot/: vertex_shader.glsl
app_demo/src/main/: AndroidManifest.xml
app_native/: build.gradle
app_native/src/main/: AndroidManifest.xml
app_tankwar/: .gitignore  build.gradle
app_tankwar/src/main/: AndroidManifest.xml
app_tankwar/src/main/assets/: appConfig.properties
app_xgame/: build.gradle
app_xgame/src/main/: AndroidManifest.xml
backEnd/: build.gradle
buildSrc/: build.gradle.kts
buildSrc/gradle/: integration-test.gradle.kts
buildSrc/src/main/kotlin/: BuildConfig.kt  ModuleConfig.kt  java-library-convention.gradle.kts  version.dependencies.kt
core/: build.gradle  build.gradle.kts  plugin.gradle.kts  version.properties
core/src/: log4j.properties
gradle/wrapper/: gradle-wrapper.properties
login/: build.gradle
login/src/main/: AndroidManifest.xml
myAndroidLibrary/: build.gradle.kts
myAndroidLibrary/src/main/: AndroidManifest.xml
myLib/: build.gradle.kts
nativelib/: build.gradle  build.gradle.kts
nativelib/src/main/: AndroidManifest.xml
nativelib/src/main/cpp/: CMakeLists.txt  Core.h  Matrix.cpp  Matrix.h  MyBitmapHelper.cpp  MyJNIHelper.cpp  MyJNIHelper.h  nativelib.cpp
nativelib/src/main/cpp/include/: Core.h  MyBitmapHelper.h  MyJNIHelper.h
nativelib/src/main/cpp/include/common/: MeshCommon.h  MyJNIHelper.h  WorldTrans.h
nativelib/src/main/cpp/include/math/: Math3D.h  Matrix.h
nativelib/src/main/cpp/include/modelAssimp/: AssimpLoader.h  BasicMesh.h  Material.h  Mesh.h  ModelAssimp.h
nativelib/src/main/cpp/include/renderer/: GLESNative.h  gl3stub.h
nativelib/src/main/cpp/jniCall/: AssimpLoader.cpp  CMakeLists.txt  Gesture.cpp  GlesContext.cpp  GlesRenderer.cpp
nativelib/src/main/cpp/nativeCode/common/: AssimpLoader.cpp  AssimpLoader.h  MyBitmapHelper.cpp  MyJNIHelper.cpp  MyJNIHelper.h  WorldTrans.cpp
nativelib/src/main/cpp/nativeCode/math/: Math3D.cpp  Matrix.cpp
nativelib/src/main/cpp/nativeCode/modelAssimp/: AssimpLoader.cpp  AssimpLoader.h  BasicMesh.cpp  Mesh.cpp  ModelAssimp.cpp  ModelAssimp.h
nativelib/src/main/cpp/nativeCode/renderer/: GLESNative.cpp  GLESNative.h  NativeRenderer.cpp  NativeRenderer.h  gl3stub.c  gl3stub.h
nativelib/src/main/cpp/nativeCode/temp/: Mesh.h  MyJNIHelper.cpp  MyJNIHelper.h
nativelib/src/main/cpp/vendors/assimp/include/assimp/: DefaultLogger.hpp  Exporter.hpp  MathFunctions.h  commonMetaData.h  importerdesc.h  material.h
(+1180 files in other folders)
